chore: cosmfaucet proto

--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,9 @@ server:
     enabled: true
     period: 86400
 chains:
-  - name: "cosmos"
+  - name: "test"
+    grpc_endpoint: "localhost:9090"
+    chain_id: testchain
     faucet:
       sender: "cosmos1u9vn33qs6jdr3wwq4u2l9p349n9c95uxz2lew0"
       key: "reopen throw concert garment wash slab jump company habit father below stage float attitude achieve net charge bulb mouse mind fat net hello vague"
