--- a/config.yml
+++ b/config.yml
@@ -5,10 +5,10 @@ server:
     period: 86400
 chains:
   - name: "test"
-    grpc_endpoint: "localhost:9090"
+    rpc_endpoint: "localhost:26657"
     chain_id: testchain
     faucet:
       sender: "cosmos1u9vn33qs6jdr3wwq4u2l9p349n9c95uxz2lew0"
+      accountPrefix: "cosmos"
       key: "reopen throw concert garment wash slab jump company habit father below stage float attitude achieve net charge bulb mouse mind fat net hello vague"
-      denom: "atom"
-      drop_amount: "10000000"
+      drop_coin: "10000000uatom"
