--- a/config.yml
+++ b/config.yml
@@ -1,14 +1,18 @@
 server:
-  port: 8080
+  http:
+    port: 8081
+  grpc:
+    port: 9090
   limit:
     enabled: true
     period: 86400
 chains:
   - name: "test"
+    chain_id: "testchain"
     rpc_endpoint: "localhost:26657"
-    chain_id: testchain
-    faucet:
-      sender: "cosmos1u9vn33qs6jdr3wwq4u2l9p349n9c95uxz2lew0"
-      accountPrefix: "cosmos"
-      key: "reopen throw concert garment wash slab jump company habit father below stage float attitude achieve net charge bulb mouse mind fat net hello vague"
-      drop_coin: "10000000uatom"
+    account_prefix: "cosmos"
+    sender: "cosmos1u9vn33qs6jdr3wwq4u2l9p349n9c95uxz2lew0"
+    key: "reopen throw concert garment wash slab jump company habit father below stage float attitude achieve net charge bulb mouse mind fat net hello vague"
+    gas_adjustment: 1.2
+    gas_price: "0.01uatom"
+    drop_coin: "10000000uatom"
