feat: check sender has enough balance to pay out to the users

--- a/config.yml
+++ b/config.yml
@@ -2,14 +2,14 @@ server:
   http:
     port: 8081
   grpc:
-    port: 9090
+    port: 9092
   limit:
     enabled: true
     period: 86400
 chains:
   - name: "test"
     chain_id: "testchain"
-    rpc_endpoint: "localhost:26657"
+    rpc_endpoint: "http://localhost:26657/"
     account_prefix: "cosmos"
     sender: "cosmos1u9vn33qs6jdr3wwq4u2l9p349n9c95uxz2lew0"
     key: "reopen throw concert garment wash slab jump company habit father below stage float attitude achieve net charge bulb mouse mind fat net hello vague"
