--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   testchain:
+    container_name: testchain
     image: tendermint/gaia:v4.2.0
     restart: always
     user: root
@@ -19,18 +20,18 @@ services:
       - "1317:1317"
       - "9090:9090"
       - "9091:9091"
-#  faucet:
-#    build:
-#      context: ..
-#    restart: always
-#    volumes:
-#      - ./configs:/app/config/config.yml
-#    command:
-#      - /bin/sh
-#      - -c
-#      - |
-#        echo "start run faucet."
-#        /app/server --config-file /app/config/config.yml
-#    ports:
-#      - "8081:8081"
-#      - "9092:9092"
+  faucet:
+    build:
+      context: ..
+    restart: always
+    volumes:
+      - ./configs:/app/config/
+    command:
+      - /bin/sh
+      - -c
+      - |
+        echo "start run faucet."
+        /app/server --config-file /app/config/config.yml
+    ports:
+      - "8080:8080"
+      - "9092:9092"
