--- a/e2e/configs/config.yml
+++ b/e2e/configs/config.yml
@@ -10,11 +10,21 @@ server:
 chains:
   - name: "cosmos"
     key_name: "cosmos"
-    chain_id: "testchain"
-    rpc_endpoint: "http://testchain:26657/"
+    chain_id: "gaia"
+    rpc_endpoint: "http://testchain-1:26657/"
     account_prefix: "cosmos"
     sender: "cosmos1u9vn33qs6jdr3wwq4u2l9p349n9c95uxz2lew0"
     key: "reopen throw concert garment wash slab jump company habit father below stage float attitude achieve net charge bulb mouse mind fat net hello vague"
+    gas_adjustment: 1.2
+    gas_price: "0.01uatom"
+    drop_coin: "10000000uatom"
+  - name: "juno"
+    key_name: "juno"
+    chain_id: "juno"
+    rpc_endpoint: "http://testchain-2:26657/"
+    account_prefix: "cosmos"
+    sender: "cosmos10hhwf89y3gvum4xyzlyz48zxldjehlqzf4dlwt"
+    key: "predict lonely oxygen category agent wait legend quarter often six liquid search panic panther chuckle glow alone detail bike below dust marriage throw pause"
     gas_adjustment: 1.2
     gas_price: "0.01uatom"
     drop_coin: "10000000uatom"
